--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/queries.css" />
     <script defer src="https://unpkg.com/@phosphor-icons/web"></script>
     <script defer src="./js/main.js"></script>
   </head>
@@ -21,26 +22,27 @@
       <a class="logo" href="#">
         <img class="ace-logo" src="./img/ace-logo.png" />
       </a>
-      <ul class="nav-list">
-        <li><a class="nav-link" href="#">About us</a></li>
-        <li><a class="nav-link" href="#">Why choose ACE?</a></li>
-        <li><a class="nav-link" href="#">Testimonials</a></li>
-        <li><a class="nav-link" href="#">Our Programs</a></li>
-      </ul>
-      <button class="enroll-cta">Enroll now</button>
+      <nav class="nav-container">
+        <ul class="nav-list">
+          <li><a class="nav-link" href="#">About us</a></li>
+          <li><a class="nav-link" href="#">Why choose ACE?</a></li>
+          <li><a class="nav-link" href="#">Testimonials</a></li>
+          <li><a class="nav-link" href="#">Our Programs</a></li>
+        </ul>
+        <button class="enroll-cta">Enroll now</button>
+      </nav>
     </header>
     <section class="section--hero">
       <div class="hero">
         <div>
-          <span class="subheading">About us</span>
+          <!-- <span class="subheading">About us</span> -->
           <h1 class="heading-primary">
-            <span>Ace</span> your board examinations and be a competent
-            professional.
+            <span>Ace</span> your board exams and be a competent professional.
           </h1>
           <p class="hero-description">
             Gain mastery in chemistry and food technology with the best
-            professors from the top univerities in the country, only here at ACE
-            Review Center &mdash; the leading Chemistry Review Center since
+            professors from the top universities in the country, only here at
+            ACE Review Center &mdash; the leading Chemistry Review Center since
             2010.
           </p>
           <div class="hero-btn-container">
@@ -69,7 +71,15 @@
           <div class="feature-title">High Passing Rate</div>
           <p class="feature-description">
             Last year, ACE has a passing rate of 84%. The national passing rate
-            (chemistry boards) was 62%.
+            (chem boards) was 62%.
+          </p>
+        </div>
+        <div class="feature-box">
+          <i class="ph ph-notebook icons"></i>
+          <div class="feature-title">Updated Modules</div>
+          <p class="feature-description">
+            The topics are annually updated based on the syllabus released by
+            the Board of Chemistry.
           </p>
         </div>
         <div class="feature-box">
@@ -79,85 +89,88 @@
             You get to choose between on-site and virtual review setting.
           </p>
         </div>
-        <div class="feature-box">
-          <i class="ph ph-notebook icons"></i>
-          <div class="feature-title">Updated Learning Modules</div>
-          <p class="feature-description">
-            The topics are annually updated based on the syllabus released by
-            the Board of Chemistry.
-          </p>
-        </div>
       </div>
     </section>
 
     <section class="section section--testimonials">
-      <i class="ph ph-atom background-icon background-icon-atom"></i>
-      <i class="ph ph-flask background-icon background-icon-flask"></i>
       <span class="subheading">Testimonials</span>
       <div class="testimonial-slider">
-        <div class="testimonial-slides">
-          <div>
-            <blockquote class="testimonial-text">
-              "I'm glad that I enrolled here in ACE. The instructors were very
-              detailed and meticuluous when it comes to explaining the lessons.
-              They make sure that each student can easily grasp the information
-              about each topic."
-            </blockquote>
-            <div class="testimonial-author">
-              <p>John Steven S. Cruz</p>
-              <p>Top 3, Chemist Licensure Exam 2022</p>
-            </div>
-          </div>
-          <img class="testimonial-img" src="./img/john-steven.jpg" />
-        </div>
-        <div class="testimonial-slides">
-          <div>
-            <blockquote class="testimonial-text">
-              "Each session of my review journey here at ACE was very engaging.
-              The instructors reinforce the discussion by giving a lot of
-              problems regarding the topic. Their catchy mnemonics helped me a
-              lot in my journey as becoming a professional chemist."
-            </blockquote>
-            <div class="testimonial-author">
-              <p>Sofia C. Sy</p>
-              <p>Top 1, Chemist Licensure Exam 2022</p>
-            </div>
-          </div>
-          <img class="testimonial-img" src="./img/sofia.jpg" />
-        </div>
-        <div class="testimonial-slides">
-          <div>
-            <blockquote class="testimonial-text">
-              "They really prepare their students not only by teaching the
-              topics and courses but also by giving tips and strategies on how
-              to be ready on taking the examination. It is definitely true that
-              choosing the right mentor makes a big difference."
-            </blockquote>
-            <div class="testimonial-author">
-              <p>Maria F. Guevarra</p>
-              <p>Top 5, Chemical Technician Licensure Exam 2023</p>
-            </div>
-          </div>
-          <img class="testimonial-img" src="./img/maria.jpg" />
-        </div>
         <button class="btn--slider btn--left">
           <i class="ph ph-arrow-left btn--icon"></i>
         </button>
         <button class="btn--slider btn--right">
           <i class="ph ph-arrow-right btn--icon"></i>
         </button>
+        <div class="slide-container">
+          <div class="testimonial-slide">
+            <div>
+              <blockquote>
+                <p class="testimonial-text">
+                  "I'm glad that I enrolled here in ACE. The instructors were
+                  very detailed and meticuluous when it comes to explaining the
+                  lessons. They make sure that each student can easily grasp the
+                  information about each topic."
+                </p>
+                <div class="testimonial-author">
+                  <p>John Steven S. Cruz</p>
+                  <p>Top 3, Chemist Licensure Exam 2022</p>
+                </div>
+              </blockquote>
+            </div>
+            <img class="testimonial-img" src="./img/john-steven.jpg" />
+          </div>
+
+          <div class="testimonial-slide">
+            <div>
+              <blockquote>
+                <p class="testimonial-text">
+                  "Each session of my review journey here at ACE was very
+                  engaging. The instructors reinforce the discussion by giving a
+                  lot of problems regarding the topic. Their catchy mnemonics
+                  helped me a lot in my journey as becoming a professional
+                  chemist."
+                </p>
+                <div class="testimonial-author">
+                  <p>Sofia C. Sy</p>
+                  <p>Top 1, Chemist Licensure Exam 2022</p>
+                </div>
+              </blockquote>
+            </div>
+            <img class="testimonial-img" src="./img/sofia.jpg" />
+          </div>
+
+          <div class="testimonial-slide">
+            <div>
+              <blockquote>
+                <p class="testimonial-text">
+                  "They really prepare their students not only by teaching the
+                  topics and courses but also by giving tips and strategies on
+                  how to be ready on taking the examination. It is definitely
+                  true that choosing the right mentor makes a big difference."
+                </p>
+                <div class="testimonial-author">
+                  <p>Maria F. Guevarra</p>
+                  <p>Top 5, Chemical Technician Licensure Exam 2023</p>
+                </div>
+              </blockquote>
+            </div>
+            <img class="testimonial-img" src="./img/maria.jpg" />
+          </div>
+        </div>
+
+        <i class="ph ph-atom background-icon atom-icon"></i>
+        <i class="ph ph-flask background-icon flask-icon"></i>
       </div>
     </section>
 
     <section class="section section--programs">
-      <i class="ph ph-atom background-icon background-icon-atom"></i>
-      <i class="ph ph-flask background-icon background-icon-flask"></i>
       <span class="subheading">Program offerings</span>
-      <div class="btn--container">
+      <div class="program-btn--container">
         <button class="btn--tab btn--tab-active">Chemistry</button>
         <button class="btn--tab">Chemical Technology</button>
         <button class="btn--tab">Food Tecnology</button>
       </div>
+
       <div class="tabs--container">
         <div class="program--tab">
           <p class="program--title">Review for Chemistry Licensure Exam</p>
@@ -171,7 +184,7 @@
             </li>
             <li>
               <i class="ph ph-barbell program--icons"></i>
-              Assess strengths and weakness based on the preliminary results
+              Assessment based on the preliminary results
             </li>
             <li>
               <i class="ph ph-exam program--icons"></i>
@@ -182,12 +195,15 @@
               Eligible for job fair hosted by ACE
             </li>
           </ul>
-          <p class="program--fees">
-            Regular Fee: <span class="reg-fee">PHP 16,500.00</span> <br />
-            Early Bird Fee:
-            <strong class="discount-fee">PHP 15,000.00</strong>
-          </p>
-          <button class="enroll-cta program--btn">Enroll Now</button>
+          <div class="fee-container">
+            <p class="program--fees">
+              Regular Fee: <span class="reg-fee">PHP 16,500.00</span> <br />
+              Early Bird Fee:
+              <strong class="discount-fee">PHP 15,000.00</strong>
+            </p>
+
+            <button class="enroll-cta programs--cta">Enroll Now</button>
+          </div>
         </div>
         <div class="program--tab hidden">
           <p class="program--title">Review for Chem Tech Licensure Exam</p>
@@ -201,7 +217,7 @@
             </li>
             <li>
               <i class="ph ph-barbell program--icons"></i>
-              Assess strengths and weakness based on the preliminary results
+              Assessment based on the preliminary results
             </li>
             <li>
               <i class="ph ph-exam program--icons"></i>
@@ -231,7 +247,7 @@
             </li>
             <li>
               <i class="ph ph-barbell program--icons"></i>
-              Assess strengths and weakness based on the preliminary results
+              Assessment based on the preliminary results
             </li>
             <li>
               <i class="ph ph-exam program--icons"></i>
