Finished layout and media queries

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,12 @@
           <li><a class="nav-link" href="#">Testimonials</a></li>
           <li><a class="nav-link" href="#">Our Programs</a></li>
         </ul>
-        <button class="enroll-cta">Enroll now</button>
+        <button class="enroll-cta nav-cta">Enroll now</button>
       </nav>
+      <button class="menu-btn">
+        <i class="ph ph-list menu-btn-icon btn-open-menu"></i>
+        <i class="ph ph-x menu-btn-icon btn-close-menu"></i>
+      </button>
     </header>
     <section class="section--hero">
       <div class="hero">
@@ -166,9 +170,9 @@
     <section class="section section--programs">
       <span class="subheading">Program offerings</span>
       <div class="program-btn--container">
-        <button class="btn--tab btn--tab-active">Chemistry</button>
-        <button class="btn--tab">Chemical Technology</button>
-        <button class="btn--tab">Food Tecnology</button>
+        <button class="btn--tab btn--tab-active">Chem</button>
+        <button class="btn--tab">Chem Tech</button>
+        <button class="btn--tab">Food Tech</button>
       </div>
 
       <div class="tabs--container">
@@ -297,6 +301,21 @@
             >
           </div>
         </div>
+
+        <div>
+          <p class="footer-heading">Follow us</p>
+          <div class="footer-nav">
+            <a class="footer-link" href="#"
+              ><i class="ph ph-facebook-logo footer-icon"></i> Facebook</a
+            >
+            <a class="footer-link" href="#"
+              ><i class="ph ph-twitter-logo footer-icon"></i> Twitter</a
+            >
+            <a class="footer-link" href="#"
+              ><i class="ph ph-instagram-logo footer-icon"></i> Instagram</a
+            >
+          </div>
+        </div>
         <div>
           <p class="footer-heading">Company</p>
           <div class="footer-nav">
@@ -309,20 +328,6 @@
             >
             <a class="footer-link" href="#"
               ><i class="ph ph-briefcase footer-icon"></i>Careers</a
-            >
-          </div>
-        </div>
-        <div>
-          <p class="footer-heading">Follow us</p>
-          <div class="footer-nav">
-            <a class="footer-link" href="#"
-              ><i class="ph ph-facebook-logo footer-icon"></i> Facebook</a
-            >
-            <a class="footer-link" href="#"
-              ><i class="ph ph-twitter-logo footer-icon"></i> Twitter</a
-            >
-            <a class="footer-link" href="#"
-              ><i class="ph ph-instagram-logo footer-icon"></i> Instagram</a
             >
           </div>
         </div>
@@ -376,10 +381,10 @@
 
           <button class="btn--submit">Submit</button>
         </form>
-        <p>An email will be sent shortly after submission.</p>
         <button class="btn--close-modal">
           <i class="ph ph-x close-modal-icon"></i>
         </button>
+        <p>An email will be sent shortly after submission.</p>
       </div>
     </div>
   </body>
